# similario

./: .gitignore  .rustfmt.toml  Cargo.toml  Changelog.md  README.md  clippy.toml  justfile
.github/workflows/: ci.yml
similario_cli/: Cargo.toml
similario_cli/src/: main.rs
similario_core/: Cargo.toml  README.md
similario_core/src/: lib.rs  process_utils.rs
similario_core/src/audio/: mod.rs
similario_core/src/cache/: mod.rs
similario_core/src/compare/: mod.rs
similario_core/src/metadata/: mod.rs
similario_core/src/thumbnail/: mod.rs
similario_core/src/visual/: cropdetect.rs  dct.rs  extract.rs  mod.rs  watchdog.rs
similario_core/tests/: integration_duplicates.rs
similario_gui/: Cargo.toml
similario_gui/src/: callbacks.rs  format.rs  main.rs  rows.rs  settings.rs
similario_gui/ui/: colors.slint  file_row.slint  labeled_slider.slint  main.slint  popups.slint  settings_panel.slint  toolbar.slint  types.slint
tests/: prepare_test_videos.sh
