[package]
name = "similario_cli"
version = "0.2.0"
authors = ["Rafał Mikrut <mikrutrafal@protonmail.com>"]
edition = "2024"
rust-version = "1.94.1"
description = "CLI, that allows to find similar videos"
license = "MIT"
homepage = "https://github.com/qarmin/similario"
repository = "https://github.com/qarmin/similario"

[dependencies]
similario_core = { path = "../similario_core" }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
indicatif = "0.18"
env_logger = "0.11"
ctrlc = { version = "3", features = ["termination"] }

[lints]
workspace = true
